--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: 安装 pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 9.x  # ← 添加这行，指定 pnpm 版本
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
