--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.20",
+    "@vuepress/bundler-vite": "2.0.0-rc.7",
+    "@vuepress/theme-default": "2.0.0-rc.118",
     "@vuepress/plugin-comment": "2.0.0-rc.118",
-    "@vuepress/theme-default": "2.0.0-rc.88",
+    "artalk": "^2.9.1",
     "sass-embedded": "^1.86.0",
     "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.20"
+    "vuepress": "2.0.0-rc.26"
   }
 }
