--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepress/plugin-comment": "2.0.0-rc.118",
     "@vuepress/plugin-register-components": "2.0.0-rc.118",
     "@vuepress/theme-default": "2.0.0-rc.118",
+    "@vuepress/utils": "^2.0.0-rc.26",
     "artalk": "^2.9.1",
     "sass-embedded": "^1.86.0",
     "vue": "^3.5.13",
